Start considering pocketsphinx

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+pyaudio
+pocketsphinx
 python-dotenv
 py3-tts
 SpeechRecognition
 wikipedia
-pyaudio
 wyze_sdk
 # Silences needless ALSA errors  https://github.com/Uberi/speech_recognition/issues/182#issuecomment-1426939447
 sounddevice
